# parscale-xattn

./: .gitignore  .gitmodules  CLAUDE.md  README.md  error_report.txt  existing_parscale.md  new_research.md  pyproject.toml  simple_test.py  test_cross_attention.py  test_enable_learnt_prefix.py  test_functionality.py  train.py  wandb_sweep.py
configs/: basic.yaml  basic_parscale.yaml  cross_attention.yaml  cross_attn.yaml  learnt_prefix.yaml  parscale.yaml  pile_training.yaml  replica_rope.yaml  selective_cross_attention.yaml  xkv_attn.yaml
src/parscale_xattn/: __init__.py  config_base.py  config_cross_attn.py  configuration_qwen2_parscale.py  convert.py  cross_attention.py  modeling_base.py  modeling_cross_attn.py  modeling_ground_truth.py  modeling_qwen2_parscale.py  trainer.py
src/parscale_xattn/configs/: __init__.py  cross_replica_config.py
src/parscale_xattn/models/: __init__.py  base_model.py  cross_replica_attn.py  cross_replica_model.py
src/parscale_xattn/models/cross_kv/: __init__.py  cross_kv_attn.py  cross_kv_model.py
src/parscale_xattn/models/cross_relica/: __init__.py  cross_replica_attn.py  (+1 more)
tests/: __init__.py  conftest.py  test_backward_compat.py  test_config.py  test_cross_replica_attn.py  test_equivalence.py  test_output_aggregation.py  test_prefix_tokens.py
tests/compatibility/: __init__.py  test_backward_compat.py
tests/ground_truth/: __init__.py  config.py  orig_parscale.py
tests/integration/: __init__.py  test_cross_attention.py  test_equivalence.py
tests/unit/: test_config.py  test_output_aggregation.py  test_prefix_tokens.py
(+1 files in other folders)
