[project]
name = "parscale-xattn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Pollak", email = "tomp@graphcore.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "einops>=0.6.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "tokenizers>=0.13.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.0.0",
    "wandb>=0.16.0",
    "zstandard",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
